--- a/garage-customer-frontend/src/screens/login/LoginScreen.css
+++ b/garage-customer-frontend/src/screens/login/LoginScreen.css
@@ -27,6 +27,7 @@
     text-align: center;
     justify-content: "center";
     align-items: "center";
+    font-family:'Courier New';
   }
 
 .title-text {
