--- a/garage-customer-frontend/src/screens/signup/SignupScreen.css
+++ b/garage-customer-frontend/src/screens/signup/SignupScreen.css
@@ -40,3 +40,13 @@
     width: 60px;
     height: 60px;
   }
+
+.error-message {
+    color: red;
+    font-size: 0.8rem;
+    margin-top: 5px;
+  } 
+
+  .page-title{
+    margin-bottom: 50px;
+  }
